--- a/tower-defense/Cargo.toml
+++ b/tower-defense/Cargo.toml
@@ -12,3 +12,6 @@ log = "0.4.14"
 pretty_env_logger = "0.4.0"
 rand = "0.8.5"
 lazy_static = "1.4.0"
+strum = "0.24"
+strum_macros = "0.24"
+erased-serde = "0.3.20"
