--- a/tower-defense-server/Cargo.toml
+++ b/tower-defense-server/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 tokio-tungstenite = "0.17.0"
 tokio = { version = "1.17.0", features = ["full"] }
 tokio-stream = "0.1.8"
-serde = { version = "1.0.136", features = ["derive"] }
+serde = { version = "1.0.136", features = ["derive", "rc"] }
 warp = "0.3.2"
 serde_json = "1.0.79"
 futures = { version = "0.3.21" }
